<resources>
    <string name="app_name">DapaniApp</string>
    <string name="user">USER</string>
    <string name="comment_label">COMMENT</string>
    <string name="leave_your_comment_here">Leave your comment here…</string>
    <string name="merchant">%s:\u0020</string>
    <string name="comment">%d</string>
    <string name="receipt">%d</string>
    <string name="back">Back to Expenses</string>
    <string name="receipts">Receipts</string>
    <string name="comments">Comment</string>
    <string name="post">POST</string>
    <string name="take_photo_select_picture">Take photo/select picture</string>
    <string name="uncategorized">UNCATEGORIZED</string>
    <string name="expense_app">GHARAMA APP</string>
    <string name="error_posting_comment">Error posting comment. Try again later.</string>
    <string name="no_blank_comment">Please add a comment.</string>
    <string name="scroll_up">"Scroll up "</string>
    <string name="back_to_details">Back to %s Details</string>
    <string name="no_receipts">No expense receipts available</string>
    <string name="comment_updated">Comment updated</string>
    <string name="error_uploading_receipt">Error uploading receipt. Try again later</string>
    <string name="uploading_receipt_successful">Receipt uploaded successfully</string>
</resources>
